# doogy-app

./: .env.example  .gitignore  App.tsx  CLAUDE.md  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
backend/: .env.example  .gcloudignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt  run.sh
backend/app/: main.py
claude_notes/: structure.txt
docs/: AUTH_GUIDE.md  SECURITY.md  ios-configuration.md  testflight-first-time-setup.md  testflight-updates.md
ios/: .env.example  Podfile
ios/Doogy/: AppDelegate.swift  GoogleService-Info.plist.template  Info.plist  LaunchScreen.storyboard
ios/Doogy.xcodeproj/: project.pbxproj
ios/Doogy.xcworkspace/: contents.xcworkspacedata
ios/TempChatApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/TempChatApp.xcodeproj/: project.pbxproj
ios/TempChatApp.xcworkspace/: contents.xcworkspacedata
ios/scripts/: build-ios.sh  set-google-client-id.sh  xcode-prebuild.sh
resources/: README.md
resources/dogs/: summary.json
scratch/: test_gemini.py
scripts/: generate-breeds-data.js
src/components/: ChatInput.tsx  MessageBubble.tsx
src/config/: env.d.ts  toastConfig.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useRequireAuth.ts
src/screens/: ChatScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  OnboardingScreen.tsx  SplashScreen.tsx
src/services/: chatService.ts  supabase.ts
src/theme/: DESIGNER_GUIDE.md  index.ts
src/types/: index.ts
supabase/: populate-breeds.js
supabase/migrations/: 001_initial_schema.sql  (+2 more)
(+708 files in other folders)
